<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AnalysisActivity">

    <TextView
        android:id="@+id/tv_unwritten_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_unwritten_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_analysis_weather1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_analysis_lastmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/tv_analysis_lastmonth"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_analysis_month_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="6월"
            android:textSize="12sp" />
        <!--데이터 바인딩으로 상세 달 입력 받는 것 추후 추가 필요-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_analysis_weather2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_weather1">

        <TextView
            android:id="@+id/tv_analysis_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/tv_analysis_this_month"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_analysis_month_this_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="7월"
            android:textSize="12sp" />
        <!--데이터 바인딩으로 상세 달 입력 받는 것 추후 추가 필요-->


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_weather2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">


        <TextView
            android:id="@+id/tv_statics_comparison_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_statics_comparison_title"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_btn_report_rec"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bar_statics_uparrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    app:srcCompat="@drawable/ic_uparrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp" />

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_sunny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="맑음 비율이 20% 증가했습니다."
                    android:textSize="14.6dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="60dp"
                    android:gravity="left"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bar_statics_uparrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    app:srcCompat="@drawable/ic_uparrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp" />

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_cloudy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="다소 흐림 비율이 10% 증가했습니다."
                    android:textSize="14.6dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="60dp"
                    android:gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bar_statics_downarrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    app:srcCompat="@drawable/ic_downarrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp">

                </ImageView>

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_rainy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="비 비율이 5% 감소했습니다."
                    android:textSize="14.6dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="60dp"
                    android:gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bar_statics_downarrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    app:srcCompat="@drawable/ic_downarrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp">

                </ImageView>

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_thunder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="번개 비율이 10% 감소했습니다."
                    android:textSize="14.6dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="60dp"
                    android:gravity="left"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
