<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AnalysisActivity">

    <TextView
        android:id="@+id/tv_unwritten_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_unwritten_title"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/pretendardextrabold"/>

    <LinearLayout
        android:id="@+id/ll_analysis_weather1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="59dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_analysis_last_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/tv_analysis_lastweek"
            android:textSize="15dp"
            android:fontFamily="@font/pretendardsemibold" />

        <TextView
            android:id="@+id/tv_analysis_month_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:text="7.3 ~ 7.9"
            android:textSize="12dp"
            android:fontFamily="@font/pretendardmedium"
            android:gravity="top"/>
        <!--데이터 바인딩으로 상세 달 입력 받는 것 추후 추가 필요-->

    </LinearLayout>


    <View
        android:id="@+id/ll_analysis_bar_last_week"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/ll_analysis_weather2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_weather1"
        app:layout_constraintVertical_bias="0.529"  />

    <LinearLayout
        android:id="@+id/ll_analysis_weather2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_weather1">

        <TextView
            android:id="@+id/tv_analysis_this_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/tv_analysis_this_week"
            android:textSize="15dp"
            android:fontFamily="@font/pretendardsemibold" />

        <TextView
            android:id="@+id/tv_analysis_month_this_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="1"
            android:text="7.10 ~ 7.16"
            android:textSize="12dp"
            android:fontFamily="@font/pretendardmedium"
            android:gravity="top" />
        <!--데이터 바인딩으로 상세 달 입력 받는 것 추후 추가 필요-->


    </LinearLayout>

    <View
        android:id="@+id/ll_analysis_bar_this_month"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_weather2" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_analysis_bar_this_month">


        <TextView
            android:id="@+id/tv_statics_comparison_title_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/tv_statics_comparison_title_week"
            android:fontFamily="@font/pretendardbold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_line_gray_rec_round"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_bar_statics_uparrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="3dp"
                    app:srcCompat="@drawable/ic_uparrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp" />

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_sunny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="맑음 비율이 20% 증가했습니다."
                    android:fontFamily="@font/pretendardregular"
                    android:textSize="11dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_bar_statics_uparrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_uparrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp" />

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_cloudy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="4dp"                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="다소 흐림 비율이 10% 증가했습니다."
                    android:textSize="11dp"
                    android:fontFamily="@font/pretendardregular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_bar_statics_downarrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_downarrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp">

                </ImageView>

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_rainy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp"                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="비 비율이 5% 감소했습니다."
                    android:textSize="11dp"
                    android:fontFamily="@font/pretendardregular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <ImageView
                    android:id="@+id/iv_bar_statics_downarrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="1dp"
                    app:srcCompat="@drawable/ic_downarrow"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="93dp">

                </ImageView>

                <TextView
                    android:id="@+id/tv_analysis_detail_statics_thunder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="번개 비율이 10% 감소했습니다."
                    android:textSize="11dp"
                    android:fontFamily="@font/pretendardregular"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
